@@ -80,7 +80,9 @@ def test_no_install_and_download_should_not_leave_build_dir(script):
     script.scratch_path.join("downloaded_packages").mkdir()
     assert not os.path.exists(script.venv_path / 'build')
     result = script.pip(
-        'install', '--no-install', 'INITools==0.2', '-d', 'downloaded_packages'
+        'install', '--no-install', 'INITools==0.2', '-d',
+        'downloaded_packages',
+        expect_stderr=True,
     )
     assert (
         Path('scratch') / 'downloaded_packages/build'
@@ -118,7 +120,10 @@ def test_download_should_not_delete_existing_build_dir(script):
     """
     script.venv_path.join("build").mkdir()
     script.venv_path.join("build", "somefile.txt").write("I am not empty!")
-    script.pip('install', '--no-install', 'INITools==0.2', '-d', '.')
+    script.pip(
+        'install', '--no-install', 'INITools==0.2', '-d', '.',
+        expect_stderr=True,
+    )
     with open(script.venv_path / 'build' / 'somefile.txt') as fp:
         content = fp.read()
     assert os.path.exists(script.venv_path / 'build'), (
@@ -175,5 +180,5 @@ def test_cleanup_prevented_upon_build_dir_exception(script, data):
     )
 
     assert result.returncode == PREVIOUS_BUILD_DIR_ERROR
-    assert "pip can't proceed" in result.stdout, result.stdout
+    assert "pip can't proceed" in result.stderr
     assert exists(build_simple)
