@@ -67,7 +67,7 @@ def test_nonexistent_extra_warns_user_no_wheel(script, data):
     )
     assert (
         "simple 3.0 does not provide the extra 'nonexistent'"
-        in result.stdout
+        in result.stderr
     )
 
 
@@ -85,7 +85,7 @@ def test_nonexistent_extra_warns_user_with_wheel(script, data):
     )
     assert (
         "simplewheel 2.0 does not provide the extra 'nonexistent'"
-        in result.stdout
+        in result.stderr
     )
 
 
@@ -102,4 +102,4 @@ def test_nonexistent_options_listed_in_order(script, data):
         "  simplewheel 2.0 does not provide the extra 'nonexistent'\n"
         "  simplewheel 2.0 does not provide the extra 'nope'"
     )
-    assert msg in result.stdout
+    assert msg in result.stderr
