@@ -137,6 +137,7 @@ def test_install_local_editable_with_extras(script, data):
     res = script.pip(
         'install', '-e', to_install + '[bar]', '--process-dependency-links',
         expect_error=False,
+        expect_stderr=True,
     )
     assert script.site_packages / 'easy-install.pth' in res.files_updated, (
         str(res)
