@@ -56,7 +56,8 @@ def test_git_with_sha1_revisions(script):
     script.pip(
         'install', '-e',
         '%s@%s#egg=version_pkg' %
-        ('git+file://' + version_pkg_path.abspath.replace('\\', '/'), sha1)
+        ('git+file://' + version_pkg_path.abspath.replace('\\', '/'), sha1),
+        expect_stderr=True
     )
     version = script.run('version_pkg')
     assert '0.1' in version.stdout, version.stdout
